--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,14 @@ linters-settings:
     disabled-checks:
       - singleCaseSwitch
 
+issues:
+  exclude-rules:
+    - path: '(.+)_test\.go'
+      linters:
+        - gocognit
+        - gocyclo
+        - dupl
+
 linters:
   enable:
     - asciicheck
