chore(yaml): Add ClusterRole permissions for workflows.argoproj.io

--- a/config/common/rbac/execution/controller/cluster_role.yaml
+++ b/config/common/rbac/execution/controller/cluster_role.yaml
@@ -9,7 +9,24 @@ rules:
   - ""
   resources:
   - events
+  verbs:
+  - create
+- apiGroups:
+  - ""
+  resources:
   - pods
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - argoproj.io
+  resources:
+  - workflows
   verbs:
   - create
   - delete
