--- a/config/common/rbac/execution/controller/cluster_role.yaml
+++ b/config/common/rbac/execution/controller/cluster_role.yaml
@@ -24,6 +24,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - argoproj.io
   resources:
   - workflows
