--- a/config/common/rbac/execution/webhook/cluster_role.yaml
+++ b/config/common/rbac/execution/webhook/cluster_role.yaml
@@ -6,6 +6,14 @@ metadata:
   name: webhook-role
 rules:
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - execution.furiko.io
   resources:
   - jobconfigs
