--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,35 +1,30 @@
 ##
-## This GitHub Action is used to release a new version of Furiko.
+## This GitHub Action is used to release a nightly release of Furiko.
 ##
-## The Action is run whenever a new tag is pushed, and will perform the following:
+## The Action is only used to push new container images with the tag format "nightly",
+## and will be performed whenever the main branch is pushed.
 ##
-##  - Build artifacts for each platform
-##  - Create a GitHub Release
-##  - Push new container image tags
-##
-## The release process is currently done with GoReleaser: https://goreleaser.com/
+## Because GoReleaser Pro is required for nightly release support, and to avoid unnecessary complexity,
+## a simple shell script is used instead. See ./hack/release-nightly.sh for more information.
 ##
 
-name: Release new version
+name: Perform a nightly release
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
-  release:
+  nightly:
+    # For now, only a single platform image will be built and pushed for nightly.
+    # TODO(irvinlim): Use docker manifest to support multi-arch nightly images.
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Fetch all tags
-        run: git fetch --force --tags
-      - name: Get the tag
-        id: tag_name
-        run: echo ::set-output name=TAG_NAME::${GITHUB_REF/refs\/tags\//}
       - name: Determine Go version from go.mod
         run: echo "GO_VERSION=$(grep "go 1." go.mod | cut -d " " -f 2)" >> $GITHUB_ENV
       - uses: actions/setup-go@v3
@@ -49,12 +44,5 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run goreleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          IMAGE_TAG: ${{ steps.tag_name.outputs.TAG_NAME }}
+      - name: Perform nightly release
+        run: make release-nightly
