--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM golang:1.18 AS golang-base
+FROM golang:1.18 AS build
 
 WORKDIR /go/src/github.com/furiko-io/furiko
 COPY go.mod go.sum ./
@@ -16,7 +16,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
         -o build/execution-webhook \
         /go/src/github.com/furiko-io/furiko/cmd/execution-webhook
 
-FROM alpine:3.15.0
+FROM alpine:3.15.0 AS furiko-base
 
 RUN addgroup -S furiko-io && adduser -S furiko -G furiko-io
 WORKDIR /home/furiko
@@ -26,7 +26,12 @@ WORKDIR /home/furiko
 RUN apk add --update --no-cache ca-certificates tzdata && \
     rm -rf /var/cache/apk/*
 
-# Add built binaries
-COPY --from=golang-base /go/src/github.com/furiko-io/furiko/build/* /
-
+FROM furiko-base AS execution-controller
+COPY --from=build /go/src/github.com/furiko-io/furiko/build/execution-controller /
 USER 100:101
+ENTRYPOINT [ "/execution-controller" ]
+
+FROM furiko-base AS execution-webhook
+COPY --from=build /go/src/github.com/furiko-io/furiko/build/execution-webhook /
+USER 100:101
+ENTRYPOINT [ "/execution-webhook" ]
