--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -72,8 +72,8 @@ dockers:
     ids:
       - execution-controller
     image_templates:
-      - "furiko-io/execution-controller:{{ .Tag }}-amd64"
-      - "furiko-io/execution-controller:latest-amd64"
+      - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-amd64"
+      - "ghcr.io/furiko-io/execution-controller:latest-amd64"
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--target=execution-controller"
@@ -91,8 +91,8 @@ dockers:
     ids:
       - execution-controller
     image_templates:
-      - "furiko-io/execution-controller:{{ .Tag }}-arm64v8"
-      - "furiko-io/execution-controller:latest-arm64v8"
+      - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-arm64v8"
+      - "ghcr.io/furiko-io/execution-controller:latest-arm64v8"
     build_flag_templates:
       - "--platform=linux/arm64/v8"
       - "--target=execution-controller"
@@ -110,8 +110,8 @@ dockers:
     ids:
       - execution-webhook
     image_templates:
-      - "furiko-io/execution-webhook:{{ .Tag }}-amd64"
-      - "furiko-io/execution-webhook:latest-amd64"
+      - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-amd64"
+      - "ghcr.io/furiko-io/execution-webhook:latest-amd64"
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--target=execution-webhook"
@@ -129,8 +129,8 @@ dockers:
     ids:
       - execution-webhook
     image_templates:
-      - "furiko-io/execution-webhook:{{ .Tag }}-arm64v8"
-      - "furiko-io/execution-webhook:latest-arm64v8"
+      - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-arm64v8"
+      - "ghcr.io/furiko-io/execution-webhook:latest-arm64v8"
     build_flag_templates:
       - "--platform=linux/arm64/v8"
       - "--target=execution-webhook"
