--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+        with:
+          platforms: |
+            linux/amd64
+            linux/arm64/v8
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
