--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -91,10 +91,10 @@ dockers:
     ids:
       - execution-controller
     image_templates:
-      - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-arm64v8"
-      - "ghcr.io/furiko-io/execution-controller:latest-arm64v8"
+      - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-arm64"
+      - "ghcr.io/furiko-io/execution-controller:latest-arm64"
     build_flag_templates:
-      - "--platform=linux/arm64/v8"
+      - "--platform=linux/arm64"
       - "--target=execution-controller"
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.description={{ .ProjectName }}
@@ -129,10 +129,10 @@ dockers:
     ids:
       - execution-webhook
     image_templates:
-      - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-arm64v8"
-      - "ghcr.io/furiko-io/execution-webhook:latest-arm64v8"
+      - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-arm64"
+      - "ghcr.io/furiko-io/execution-webhook:latest-arm64"
     build_flag_templates:
-      - "--platform=linux/arm64/v8"
+      - "--platform=linux/arm64"
       - "--target=execution-webhook"
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.description={{ .ProjectName }}
@@ -148,19 +148,19 @@ docker_manifests:
 - name_template: "furiko-io/execution-controller:{{ .Tag }}"
   image_templates:
   - "furiko-io/execution-controller:{{ .Tag }}-amd64"
-  - "furiko-io/execution-controller:{{ .Tag }}-arm64v8"
+  - "furiko-io/execution-controller:{{ .Tag }}-arm64"
 - name_template: "furiko-io/execution-controller:latest"
   image_templates:
   - "furiko-io/execution-controller:latest-amd64"
-  - "furiko-io/execution-controller:latest-arm64v8"
+  - "furiko-io/execution-controller:latest-arm64"
 - name_template: "furiko-io/execution-webhook:{{ .Tag }}"
   image_templates:
   - "furiko-io/execution-webhook:{{ .Tag }}-amd64"
-  - "furiko-io/execution-webhook:{{ .Tag }}-arm64v8"
+  - "furiko-io/execution-webhook:{{ .Tag }}-arm64"
 - name_template: "furiko-io/execution-webhook:latest"
   image_templates:
   - "furiko-io/execution-webhook:latest-amd64"
-  - "furiko-io/execution-webhook:latest-arm64v8"
+  - "furiko-io/execution-webhook:latest-arm64"
 
 # Prepare release assets.
 release:
