--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           platforms: |
             linux/amd64
-            linux/arm64
+            linux/arm64/v7
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
