chore: Use arm/v7 and arm64/v8

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,8 @@ jobs:
         with:
           platforms: |
             linux/amd64
-            linux/arm64/v7
+            linux/arm
+            linux/arm64
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
