--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,7 @@ builds:
       - linux
     goarch:
       - amd64
+      - arm
       - arm64
     goarm:
       - "7"
@@ -26,6 +27,7 @@ builds:
       - linux
     goarch:
       - amd64
+      - arm
       - arm64
     goarm:
       - "7"
@@ -93,8 +95,27 @@ dockers:
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
       - --label=org.opencontainers.image.licenses=Apache-2.0
   - goos: linux
-    goarch: arm64
+    goarch: arm
     goarm: "7"
+    use: buildx
+    ids:
+      - execution-controller
+    image_templates:
+      - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-armv7"
+      - "ghcr.io/furiko-io/execution-controller:latest-armv7"
+    build_flag_templates:
+      - "--platform=linux/arm/v7"
+      - "--target=execution-controller"
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description=Cloud-native, enterprise-level cron job platform for Kubernetes
+      - --label=org.opencontainers.image.url=https://github.com/furiko-io/{{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/furiko-io/{{ .ProjectName }}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
+  - goos: linux
+    goarch: arm64
     use: buildx
     ids:
       - execution-controller
@@ -132,8 +153,27 @@ dockers:
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
       - --label=org.opencontainers.image.licenses=Apache-2.0
   - goos: linux
-    goarch: arm64
+    goarch: arm
     goarm: "7"
+    use: buildx
+    ids:
+      - execution-webhook
+    image_templates:
+      - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-armv7"
+      - "ghcr.io/furiko-io/execution-webhook:latest-armv7"
+    build_flag_templates:
+      - "--platform=linux/arm/v7"
+      - "--target=execution-webhook"
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description=Cloud-native, enterprise-level cron job platform for Kubernetes
+      - --label=org.opencontainers.image.url=https://github.com/furiko-io/{{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/furiko-io/{{ .ProjectName }}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
+  - goos: linux
+    goarch: arm64
     use: buildx
     ids:
       - execution-webhook
@@ -141,7 +181,7 @@ dockers:
       - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-arm64"
       - "ghcr.io/furiko-io/execution-webhook:latest-arm64"
     build_flag_templates:
-      - "--platform=linux/arm64"
+      - "--platform=linux/arm64/v8"
       - "--target=execution-webhook"
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.description=Cloud-native, enterprise-level cron job platform for Kubernetes
@@ -157,18 +197,22 @@ docker_manifests:
 - name_template: "furiko-io/execution-controller:{{ .Tag }}"
   image_templates:
   - "furiko-io/execution-controller:{{ .Tag }}-amd64"
+  - "furiko-io/execution-controller:{{ .Tag }}-armv7"
   - "furiko-io/execution-controller:{{ .Tag }}-arm64"
 - name_template: "furiko-io/execution-controller:latest"
   image_templates:
   - "furiko-io/execution-controller:latest-amd64"
+  - "furiko-io/execution-controller:latest-armv7"
   - "furiko-io/execution-controller:latest-arm64"
 - name_template: "furiko-io/execution-webhook:{{ .Tag }}"
   image_templates:
   - "furiko-io/execution-webhook:{{ .Tag }}-amd64"
+  - "furiko-io/execution-webhook:{{ .Tag }}-armv7"
   - "furiko-io/execution-webhook:{{ .Tag }}-arm64"
 - name_template: "furiko-io/execution-webhook:latest"
   image_templates:
   - "furiko-io/execution-webhook:latest-amd64"
+  - "furiko-io/execution-webhook:latest-armv7"
   - "furiko-io/execution-webhook:latest-arm64"
 
 # Prepare release assets.
