--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -200,26 +200,26 @@ dockers:
 
 # Support Docker manifests for multi-arch images.
 docker_manifests:
-- name_template: "furiko-io/execution-controller:{{ .Tag }}"
+- name_template: "ghcr.io/furiko-io/execution-controller:{{ .Tag }}"
   image_templates:
-  - "furiko-io/execution-controller:{{ .Tag }}-amd64"
-  - "furiko-io/execution-controller:{{ .Tag }}-armv7"
-  - "furiko-io/execution-controller:{{ .Tag }}-arm64"
-- name_template: "furiko-io/execution-controller:latest"
+  - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-amd64"
+  - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-armv7"
+  - "ghcr.io/furiko-io/execution-controller:{{ .Tag }}-arm64"
+- name_template: "ghcr.io/furiko-io/execution-controller:latest"
   image_templates:
-  - "furiko-io/execution-controller:latest-amd64"
-  - "furiko-io/execution-controller:latest-armv7"
-  - "furiko-io/execution-controller:latest-arm64"
-- name_template: "furiko-io/execution-webhook:{{ .Tag }}"
+  - "ghcr.io/furiko-io/execution-controller:latest-amd64"
+  - "ghcr.io/furiko-io/execution-controller:latest-armv7"
+  - "ghcr.io/furiko-io/execution-controller:latest-arm64"
+- name_template: "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}"
   image_templates:
-  - "furiko-io/execution-webhook:{{ .Tag }}-amd64"
-  - "furiko-io/execution-webhook:{{ .Tag }}-armv7"
-  - "furiko-io/execution-webhook:{{ .Tag }}-arm64"
-- name_template: "furiko-io/execution-webhook:latest"
+  - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-amd64"
+  - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-armv7"
+  - "ghcr.io/furiko-io/execution-webhook:{{ .Tag }}-arm64"
+- name_template: "ghcr.io/furiko-io/execution-webhook:latest"
   image_templates:
-  - "furiko-io/execution-webhook:latest-amd64"
-  - "furiko-io/execution-webhook:latest-armv7"
-  - "furiko-io/execution-webhook:latest-arm64"
+  - "ghcr.io/furiko-io/execution-webhook:latest-amd64"
+  - "ghcr.io/furiko-io/execution-webhook:latest-armv7"
+  - "ghcr.io/furiko-io/execution-webhook:latest-arm64"
 
 # Prepare release assets.
 release:
